--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Electricity Bill Analyzer</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f0f8ff;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      background-color: #003366;
+      color: white;
+      padding: 20px;
+      font-size: 30px;
+    }
+
+    section {
+      margin: 40px auto;
+      max-width: 800px;
+      padding: 20px;
+      background: white;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+    }
+
+    h2 {
+      color: #003366;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: #003366;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      transition: background-color 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #0055aa;
+    }
+
+    footer {
+      margin-top: 50px;
+      padding: 15px;
+      background-color: #003366;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    Electricity Bill Analyzer
+  </header>
+
+  <section>
+    <h2>Welcome to Our Project</h2>
+    <p>
+      This project is a smart web-based tool designed to help users analyze their electricity consumption effectively.
+      Features include Carbon Footprint Estimation, Load-wise Device Usage, PDF Bill Generation, and Monthly Alerts via SMS or Email.
+    </p>
+    <p>
+      Developed using HTML, CSS, and JavaScript, and soon available as a mobile app via Flutter.
+    </p>
+    <a href="main.html" class="btn">Enter Application</a>
+  </section>
+
+  <footer>
+    &copy; 2025 | Team Energy Insight
+  </footer>
+
+</body>
+</html>
 
